--- a/go-pusher-chat-app/public/index.html
+++ b/go-pusher-chat-app/public/index.html
@@ -13,5 +13,27 @@
             <a class="navbar-brand" href="#">Welcome</a>
         </nav>
     </header>
+    <div class="container-fluid">
+        <div class="row" id="mainrow">
+            <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+                <ul class="nav nav-pills flex-column" id="rooms"></ul>
+            </nav>
+            <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3" id="registerScreen">
+                <h3 style="text-align: center">Type in your details to chat</h3>
+                <hr/>
+                <div class="chat" style="margin-bottom: 150px;">
+                    <form id="loginScreenForm">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="fullname" placeholder="Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="email" placeholder="Email Address" required>
+                        </div>
+                        <button type="submit" class="btn btn-block btn-primary">Submit</button>
+                    </form>
+                </div>
+            </main>
+        </div>
+    </div>
 </body>
 </html>
