--- a/go_chat_04/home.html
+++ b/go_chat_04/home.html
@@ -29,7 +29,8 @@ window.onload = function () {
     };
 
     if (window["WebSocket"]) {
-        conn = new WebSocket("ws://" + document.location.host + "/ws");
+        const host = document.location.host ? document.location.host : "localhost:8080"
+        conn = new WebSocket("ws://" + host + "/ws");
         conn.onclose = function (evt) {
             var item = document.createElement("div");
             item.innerHTML = "<b>Connection closed.</b>";
